<resources>
    <string name="app_name">ColoredMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three_text">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five_text">Box Five</string>
    <string name="how_to_play">How To Play</string>
    <string name="info_text">Tap Screen and Button</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
</resources>
