<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/bg_view">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            style="@style/WhiteBox"
            android:id="@+id/box_one_text"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/RedBox"/>
    <TextView
            android:text="@string/box_three_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" style="@style/BlueBox"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" style="@style/CyanBox" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/box_five_text"/>
    <TextView
            android:text="@string/box_five_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" style="@style/CyanBox" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/box_three_text"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:fontFamily="@font/roboto_thin" android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/info_text"/>
    <TextView
            android:text="@string/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/label_text" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            app:layout_constraintHorizontal_bias="0.15" app:layout_constraintVertical_bias="0.45"/>
    <Button
            android:text="@string/yellow"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/green_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/green_button"/>
    <Button
            android:text="@string/green"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/info_text" app:layout_constraintVertical_bias="0.931"/>
    <Button
            android:text="@string/red"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:id="@+id/red_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>